refactor: fixed setup, run configs & build tasks

--- a/gameadapter-forge/src/main/resources/META-INF/mods.toml
+++ b/gameadapter-forge/src/main/resources/META-INF/mods.toml
@@ -9,6 +9,7 @@ version = "${file.jarVersion}"
 displayName = "GameAdapter (Forge)"
 displayURL = "https://www.curseforge.com/minecraft/mc-mods/ibe-editor"
 authors = "Franckyi"
+description = "Dependency for GUAPI and IBE Editor"
 
 [[dependencies.gameadapter-forge]]
 modId = "forge"
