--- a/gameadapter-fabric/build.gradle
+++ b/gameadapter-fabric/build.gradle
@@ -21,6 +21,16 @@ dependencies {
     implementation project(':gameadapter-base')
 }
 
+processResources {
+    from "src/main/resources"
+
+    inputs.property "version", project.mod_version
+
+    filesMatching("fabric.mod.json") {
+        expand "version": project.mod_version
+    }
+}
+
 tasks.withType(JavaCompile).configureEach {
     it.options.encoding = "UTF-8"
 
