--- a/guapi/vanilla-theme/forge/src/main/resources/META-INF/mods.toml
+++ b/guapi/vanilla-theme/forge/src/main/resources/META-INF/mods.toml
@@ -4,36 +4,36 @@ license = "MIT"
 issueTrackerURL = "https://github.com/Franckyi/IBE-Editor/issues"
 
 [[mods]]
-modId = "guapi-vanilla-theme-forge"
+modId = "guapi-vanilla-theme"
 version = "${file.jarVersion}"
-displayName = "GUAPI: Vanilla Theme (Forge)"
+displayName = "GUAPI: Vanilla Theme"
 displayURL = "https://www.curseforge.com/minecraft/mc-mods/ibe-editor"
 authors = "Franckyi"
 description = "GUAPI extension to register the 'Vanilla' theme"
 
-[[dependencies.guapi-vanilla-theme-forge]]
+[[dependencies.guapi-vanilla-theme]]
 modId = "forge"
 mandatory = true
 versionRange = "[36,)"
 ordering = "NONE"
 side = "BOTH"
 
-[[dependencies.guapi-vanilla-theme-forge]]
+[[dependencies.guapi-vanilla-theme]]
 modId = "minecraft"
 mandatory = true
 versionRange = "[1.16,)"
 ordering = "NONE"
 side = "BOTH"
 
-[[dependencies.guapi-vanilla-theme-forge]]
-modId = "guapi-forge"
+[[dependencies.guapi-vanilla-theme]]
+modId = "guapi"
 mandatory = true
 versionRange = "[${file.jarVersion}]"
 ordering = "NONE"
 side = "BOTH"
 
-[[dependencies.guapi-vanilla-theme-forge]]
-modId = "gameadapter-forge"
+[[dependencies.guapi-vanilla-theme]]
+modId = "gameadapter"
 mandatory = true
 versionRange = "[${file.jarVersion}]"
 ordering = "NONE"
