--- a/ibeeditor/forge/src/main/resources/META-INF/build.mods.toml
+++ b/ibeeditor/forge/src/main/resources/META-INF/build.mods.toml
@@ -5,41 +5,48 @@ issueTrackerURL = "https://github.com/Franckyi/IBE-Editor/issues"
 logoFile = "logo.png"
 
 [[mods]]
-modId = "ibeeditor-forge"
+modId = "ibeeditor"
 version = "${file.jarVersion}"
-displayName = "IBE Editor (Forge)"
+displayName = "IBE Editor"
 displayURL = "https://www.curseforge.com/minecraft/mc-mods/ibe-editor"
 credits = "Thanks to Emex for the logo !"
 authors = "Franckyi"
 description = "Simple GUI Mod to edit an item, a block or an entity in your current world"
 
 [[mods]]
-modId = "guapi-vanilla-theme-forge"
+modId = "guapi-vanilla-theme"
 version = "${file.jarVersion}"
-displayName = "GUAPI: Vanilla Theme (Forge)"
+displayName = "GUAPI: Vanilla Theme"
 displayURL = "https://www.curseforge.com/minecraft/mc-mods/ibe-editor"
 authors = "Franckyi"
 description = "GUAPI extension to register the 'Vanilla' theme"
 
 [[mods]]
-modId = "guapi-forge"
+modId = "guapi"
 version = "${file.jarVersion}"
-displayName = "GUAPI (Forge)"
+displayName = "GUAPI"
 displayURL = "https://www.curseforge.com/minecraft/mc-mods/ibe-editor"
 authors = "Franckyi"
 description = "A Minecraft GUI API inspired by JavaFX"
 
 [[mods]]
-modId = "gameadapter-forge"
+modId = "gameadapter"
 version = "${file.jarVersion}"
-displayName = "GameAdapter (Forge)"
+displayName = "GameAdapter"
 displayURL = "https://www.curseforge.com/minecraft/mc-mods/ibe-editor"
 authors = "Franckyi"
 description = "Dependency for GUAPI and IBE Editor"
 
-[[dependencies.ibeeditor-forge]]
+[[dependencies.ibeeditor]]
 modId = "forge"
 mandatory = true
 versionRange = "[36,)"
+ordering = "NONE"
+side = "BOTH"
+
+[[dependencies.ibeeditor]]
+modId = "minecraft"
+mandatory = true
+versionRange = "[1.16,)"
 ordering = "NONE"
 side = "BOTH"
