--- a/databindings/base/build.gradle
+++ b/databindings/base/build.gradle
@@ -1,5 +1,6 @@
 archivesBaseName = 'databindings-base'
 
 dependencies {
+    implementation "org.apache.logging.log4j:log4j-api:2.8.1"
     implementation project(':databindings:api')
 }
