--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,13 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # IBE Editor
 minecraft_version=1.16.5
-mod_version=2.0.0
+mod_version=2.0.0-testing.1
 # Fabric https://modmuss50.me/fabric.html
 yarn_mappings=1.16.5+build.10
 loader_version=0.11.6
-fabric_version=0.36.0+1.16
+fabric_version=0.37.1+1.16
 loom_version=0.7-SNAPSHOT
 # Forge
-forge_version=1.16.5-36.1.32
+forge_version=1.16.5-36.2.2
 mappings_channel=official
 mappings_version=1.16.5
