--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,3 +25,9 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+      
+    - name: Upload build artifact
+      uses: actions/upload-artifact@v2.2.1
+      with:
+        name: build
+        path: build/*.jar
