--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,4 +30,4 @@ jobs:
       uses: actions/upload-artifact@v2.2.1
       with:
         name: build
-        path: build/*.jar
+        path: build/libs
