--- a/settings.gradle
+++ b/settings.gradle
@@ -13,15 +13,14 @@ include 'databindings:api'
 include 'databindings:base'
 include 'gameadapter:api'
 include 'gameadapter:fabric'
-include 'gameadapter:forge'
+//include 'gameadapter:forge'
 include 'guapi:api'
 include 'guapi:base'
 include 'guapi:fabric'
-include 'guapi:forge'
+//include 'guapi:forge'
 include 'guapi:vanilla-theme:base'
 include 'guapi:vanilla-theme:fabric'
-include 'guapi:vanilla-theme:forge'
+//include 'guapi:vanilla-theme:forge'
 include 'ibeeditor:base'
 include 'ibeeditor:fabric'
-include 'ibeeditor:forge'
-
+//include 'ibeeditor:forge'
