--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,9 +5,9 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ '1.16' ]
+    branches: [ master ]
   pull_request:
-    branches: [ '1.16' ]
+    branches: [ master ]
 
 jobs:
   build:
@@ -16,10 +16,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 11
+      - name: Set up JDK 16
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          java-version: '16'
           distribution: 'adopt'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
