--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # IBE Editor
-minecraft_version=1.16.5
+minecraft_version=1.17.1
 mod_version=2.0.0
 # Fabric https://modmuss50.me/fabric.html
-yarn_mappings=1.16.5+build.10
+yarn_mappings=1.17.1+build.32
 loader_version=0.11.6
-fabric_version=0.37.1+1.16
-loom_version=0.7-SNAPSHOT
+fabric_version=0.37.1+1.17
+loom_version=0.9.+
 # Forge
 forge_version=1.16.5-36.2.2
 mappings_channel=official
