--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,9 +29,9 @@ jobs:
       
     - name: Unzip built zip
       run:   |
-             if [ "matris-os == 'ubuntu-latest' ]; then
+             if [ matrix-os == 'ubuntu-latest' ]; then
                 unzip *.zip -d build/libs
-             elif [ "matris-os" == "windows-latest" ]; then
+             elif [ matrix-os == 'windows-latest' ]; then
                 7z e *.zip -oc:\temp\destination
              else
                 echo "Haven't implememted anything for $RUNNER_OS yet."
