--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,8 +30,7 @@ jobs:
     - name: Unzip built zip
       run:   |
              if [ "$RUNNER_OS" == "Linux" ]; then
-                ls –d */
-                cd builds/libs
+                cd libs/
                 unzip "*.zip" -d build/libs/
              elif [ "$RUNNER_OS" == "Windows" ]; then
                 7z e *.zip -oc:\build\libs
