--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,4 +30,4 @@ jobs:
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2.2.4
       with:
-       path: builds/libs
+       path: build/libs
