--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,9 +5,9 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ v2 ]
+    branches: [ '1.16' ]
   pull_request:
-    branches: [ v2 ]
+    branches: [ '1.16' ]
 
 jobs:
   build:
