--- a/ibeeditor/forge/src/main/resources/META-INF/mods.toml
+++ b/ibeeditor/forge/src/main/resources/META-INF/mods.toml
@@ -8,6 +8,7 @@ logoFile = "logo.png"
 modId = "ibeeditor"
 version = "${file.jarVersion}"
 displayName = "IBE Editor"
+updateJSONURL = "https://raw.githubusercontent.com/Franckyi/IBE-Editor/master/forge_update.json"
 displayURL = "https://www.curseforge.com/minecraft/mc-mods/ibe-editor"
 credits = "Thanks to Emex for the logo !"
 authors = "Franckyi"
