--- a/guapi/forge/build.gradle
+++ b/guapi/forge/build.gradle
@@ -24,3 +24,7 @@ dependencies {
     implementation project(':guapi:api')
     implementation project(':guapi:base')
 }
+
+processResources {
+    from "src/main/resources", "../base/src/main/resources"
+}
