--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ task buildCommon(type: Jar) {
     dependsOn ":databindings:api:jar",
             ":databindings:base:jar",
             ":gameadapter:api:jar",
+            ":gameadapter:base:jar",
             ":gameadapter:fabric:build",
             ":gameadapter:forge:build",
             ":guapi:api:jar",
@@ -35,6 +36,7 @@ task buildCommon(type: Jar) {
     from zipTree("databindings/api/build/libs/databindings-api.jar"),
             zipTree("databindings/base/build/libs/databindings-base.jar"),
             zipTree("gameadapter/api/build/libs/gameadapter-api.jar"),
+            zipTree("gameadapter/base/build/libs/gameadapter-base.jar"),
             //zipTree("gameadapter/fabric/build/libs/gameadapter-fabric.jar"), JIJ
             zipTree("gameadapter/forge/build/libs/gameadapter-forge.jar"),
             zipTree("guapi/api/build/libs/guapi-api.jar"),
@@ -67,6 +69,7 @@ task buildFabric(type: Jar) {
     dependsOn ":databindings:api:jar",
             ":databindings:base:jar",
             ":gameadapter:api:jar",
+            ":gameadapter:base:jar",
             ":gameadapter:fabric:build",
             ":guapi:api:jar",
             ":guapi:base:jar",
@@ -80,6 +83,7 @@ task buildFabric(type: Jar) {
     from zipTree("databindings/api/build/libs/databindings-api.jar"),
             zipTree("databindings/base/build/libs/databindings-base.jar"),
             zipTree("gameadapter/api/build/libs/gameadapter-api.jar"),
+            zipTree("gameadapter/base/build/libs/gameadapter-base.jar"),
             //zipTree("gameadapter/fabric/build/libs/gameadapter-fabric.jar"), JIJ
             zipTree("guapi/api/build/libs/guapi-api.jar"),
             zipTree("guapi/base/build/libs/guapi-base.jar"),
@@ -105,6 +109,7 @@ task buildForge(type: Jar) {
     dependsOn ":databindings:api:jar",
             ":databindings:base:jar",
             ":gameadapter:api:jar",
+            ":gameadapter:base:jar",
             ":gameadapter:forge:build",
             ":guapi:api:jar",
             ":guapi:base:jar",
@@ -119,6 +124,7 @@ task buildForge(type: Jar) {
     from zipTree("databindings/api/build/libs/databindings-api.jar"),
             zipTree("databindings/base/build/libs/databindings-base.jar"),
             zipTree("gameadapter/api/build/libs/gameadapter-api.jar"),
+            zipTree("gameadapter/base/build/libs/gameadapter-base.jar"),
             zipTree("gameadapter/forge/build/libs/gameadapter-forge.jar"),
             zipTree("guapi/api/build/libs/guapi-api.jar"),
             zipTree("guapi/base/build/libs/guapi-base.jar"),
