--- a/gameadapter/fabric/build.gradle
+++ b/gameadapter/fabric/build.gradle
@@ -20,10 +20,11 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:$loader_version"
     modImplementation "net.fabricmc.fabric-api:fabric-api:$fabric_version"
     implementation project(':gameadapter:api')
+    implementation project(':gameadapter:base')
 }
 
 processResources {
-    from "src/main/resources"
+    from "src/main/resources", "../base/src/main/resources"
 
     inputs.property "version", project.mod_version
 
