THIS IS FOR TESTING
-DO NOT MERGE!!!-

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,6 +25,9 @@ jobs:
         run: chmod +x gradlew
       - name: Build with Gradle
         run: ./gradlew buildAll
+        
+      - name: Upload to CurseForge
+        uses: itsmeow/curseforge-upload@v3
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v2.2.1
