build: added automatic file upload to CurseForge & GitHub

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,11 @@
+import groovy.json.JsonSlurper
+import net.darkhax.curseforgegradle.TaskPublishCurseForge
+
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
     id "dev.architectury.loom" version "0.10.0-SNAPSHOT" apply false
+    id 'net.darkhax.curseforgegradle' version '1.0.7'
+    id "com.github.breadmoirai.github-release" version "2.2.12"
 }
 
 architectury {
@@ -48,4 +53,39 @@ allprojects {
     java {
         withSourcesJar()
     }
+}
+
+def versionInfo = new JsonSlurper().parse(file("versions.json"))."${version}"
+
+task curseforgeRelease(type: TaskPublishCurseForge) {
+    disableVersionDetection()
+    apiToken = findProperty("curseforge_token") ?: System.getenv("CURSEFORGE_TOKEN")
+
+    ext.uploadFile = { modLoader, project ->
+        def artifact = upload(256822, project.remapJar)
+        artifact.releaseType = versionInfo.type
+        artifact.changelog = versionInfo.changelog
+        artifact.changelogType = "markdown"
+        artifact.addModLoader(modLoader)
+        artifact.addJavaVersion("Java 17")
+        artifact.addGameVersion("1.18")
+        artifact.addGameVersion("1.18.1")
+    }
+
+    doLast {
+        uploadFile("Fabric", project(":fabric"))
+        uploadFile("Forge", project(":forge"))
+    }
+}
+
+githubRelease {
+    setToken(findProperty("github_token") ?: System.getenv("GITHUB_TOKEN"))
+    setOwner("Franckyi")
+    setRepo("IBE-Editor")
+    setTagName("mc" + minecraft_version + "-v" + version)
+    setTargetCommitish("master")
+    setReleaseName(archivesBaseName + "-" + version)
+    setBody(versionInfo.changelog)
+    setPrerelease(versionInfo.type == "alpha")
+    setReleaseAssets(project(":fabric").remapJar, project(":forge").remapJar)
 }
