--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # IBE Editor
 minecraft_version=1.18.1
-archives_base_name=IBEEditor-1.18.1
+archives_base_name=IBEEditor
 mod_version=2.0.9
 maven_group=com.github.franckyi.ibeeditor
 # Fabric https://modmuss50.me/fabric.html
@@ -11,3 +11,7 @@ fabric_loader_version=0.12.12
 fabric_api_version=0.45.2+1.18
 # Forge
 forge_version=39.0.10
+# Build and release info
+java_version=17
+major_minecraft_version=1.18
+compatible_minecraft_versions=["1.18", "1.18.1"]
