--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,11 +21,10 @@ jobs:
           java-version: 17
           distribution: 'adopt'
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
       - name: Build & release mod
-        run: ./gradlew build curseforgeRelease modrinthRelease githubRelease
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: build curseforgeRelease modrinthRelease githubRelease --no-daemon
         env:
           CURSEFORGE_TOKEN: ${{ secrets.CURSEFORGE_TOKEN }}
           MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
